# sha.zone

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
api/: Cargo.toml  build.rs
api/proto/: file_service.proto
api/src/: main.rs  token.rs
api/src/grpc/: authentication_service.rs  file_service.rs  server.rs
api/src/model/: user.rs
api/src/storage/: mod.rs  surreal.rs
proto/: authentication_service.proto  encryption_service.proto  storage_service.proto
sha-zone-protobuf/: Cargo.toml  build.rs
sha-zone-protobuf/proto/: file_service.proto  transition_service.proto
sha-zone-protobuf/src/: lib.rs
src/: error.rs  grpc.rs  main.rs  surreal.rs  token.rs  transit.rs
src/grpc/: authentication_service.rs  file_service.rs  mod.rs  server.rs
src/storage/: mod.rs  surreal.rs
transmission/: Cargo.toml  README.md
transmission/src/: error.rs  transit.rs
