[package]
name = "sha-zone"
version = "0.1.0"
edition = "2021"
authors = ["Thomas Stätter <thomas.staetter@secureflowlabs.com>"]

[[bin]]
name = "sha-zone"
path = "src/main.rs"

[[bin]]
name = "sha-zone-transit"
path = "src/transit.rs"

[dependencies]
anyhow = "1"
dotenv = "0.15"
prost = "0.12"
thiserror = "1.0"
tonic = { version = "0.11"}
tonic-web = { version = "0.11" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1", optional = true }
tokio-util = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }
rand = { version = "0.8", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["tracing-log", "fmt"] }
prost-types = { version = "0.12", optional = true }
http = { version = "1.1.0", optional = true }
http-body = { version = "1", optional = true }
hyper = { version = "1.2", optional = true }
warp = { version = "0.3.4", default-features = false, optional = true }
listenfd = { version = "1.0", optional = true }
bytes = { version = "1", optional = true }
h2 = { version = "0.4", optional = true }
tokio-rustls = { version = "0.25", optional = true }
hyper-rustls = { version = "0.26", features = ["http2"], optional = true }
rustls-pemfile = { version = "2", optional = true }
tower-http = { version = "0.5", optional = true }
surrealdb-core = "1.3"
surrealdb = { version = "1.3", features = ["kv-mem"] }
jwt = "0.16"
uuid = { version = "1.7", features = ["v4"] }

[build-dependencies]
dotenv = "0.15"
tonic-build = { version = "0.11", features = ["prost"] }
