[package]
name = "sha-zone-transmission"
version = "0.1.0"
edition = "2021"
authors = ["Thomas Stätter <thomas.staetter@secureflowlabs.com>"]
resolver = "2"

[[bin]]
name = "sha-zone-transit"
path = "src/transit.rs"

[dependencies]
dotenv = "0.15"
sha2 = "0.11.0-pre.3"
thiserror = "1.0.58"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tonic = "0.11"
tracing = "0.1"
tracing-subscriber = "0.3"
sha-zone-protobuf = { path = "../sha-zone-protobuf" }
